--- a/dl.cfg
+++ b/dl.cfg
@@ -1,3 +1,3 @@
 [AWS]
-AWS_ACCESS_KEY_ID=AKIA2EOZIWQFNI5JUAH6
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=[]
+AWS_SECRET_ACCESS_KEY=[]
